<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="9dp">

    <Button
        android:id="@+id/button0"
        android:layout_width="64dp"
        android:layout_height="41dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="224dp"
        android:layout_marginBottom="270dp"
        android:text="@string/num0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="74dp"
        android:layout_height="41dp"
        android:layout_marginStart="269dp"
        android:layout_marginTop="470dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="220dp"
        android:backgroundTint="#2196F3"
        android:text="@string/equals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="64dp"
        android:layout_height="41dp"
        android:layout_marginStart="187dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="320dp"
        android:text="@string/num3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="64dp"
        android:layout_height="41dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="224dp"
        android:layout_marginBottom="320dp"
        android:text="@string/num2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="64dp"
        android:layout_height="41dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="288dp"
        android:layout_marginBottom="320dp"
        android:text="@string/num1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="64dp"
        android:layout_height="41dp"
        android:layout_marginStart="187dp"
        android:layout_marginTop="318dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="372dp"
        android:text="@string/num6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="64dp"
        android:layout_height="41dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="318dp"
        android:layout_marginEnd="224dp"
        android:layout_marginBottom="372dp"
        android:text="@string/num5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="64dp"
        android:layout_height="41dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="318dp"
        android:layout_marginEnd="288dp"
        android:layout_marginBottom="372dp"
        android:text="@string/num4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonDivision"
        android:layout_width="74dp"
        android:layout_height="41dp"
        android:layout_marginStart="269dp"
        android:layout_marginTop="269dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="421dp"
        android:text="@string/division"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="64dp"
        android:layout_height="41dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="269dp"
        android:layout_marginEnd="288dp"
        android:layout_marginBottom="421dp"
        android:text="@string/num7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="64dp"
        android:layout_height="41dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="269dp"
        android:layout_marginEnd="224dp"
        android:layout_marginBottom="421dp"
        android:text="@string/num8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="64dp"
        android:layout_height="41dp"
        android:layout_marginStart="187dp"
        android:layout_marginTop="269dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="421dp"
        android:text="@string/num9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="74dp"
        android:layout_height="41dp"
        android:layout_marginStart="269dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="270dp"
        android:text="@string/plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="74dp"
        android:layout_height="41dp"
        android:layout_marginStart="269dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="320dp"
        android:text="@string/minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMultiplication"
        android:layout_width="74dp"
        android:layout_height="41dp"
        android:layout_marginStart="269dp"
        android:layout_marginTop="318dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="372dp"
        android:text="@string/multiplication"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="74dp"
        android:layout_height="41dp"
        android:layout_marginStart="264dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="170dp"
        android:backgroundTint="#EF2C1E"
        android:text="@string/allClear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176" />

</androidx.constraintlayout.widget.ConstraintLayout>